--- a/theme/standard/styles_ie7.css
+++ b/theme/standard/styles_ie7.css
@@ -43,6 +43,7 @@
 }
 
 form.mform input[type=text],
+form.mform input[type=file],
 form.mform input[type=password] {
  margin-left: -10px;
 }
